<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coupinions</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_view_coupons">ViewCouponsActivity</string>
    <string name="title_activity_use_coupon">UseCouponActivity</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="string_password_login">Password</string>
    <string name="string_email_login">USC Email</string>
    <string name="string_question">Favorite place to eat at Ronald Tutor Center?</string>
    <string name="string_login">Login</string>
    <string name="string_login_prompt">Login to Coupinions:</string>
    <string name="string_sign_up_prompt">sign up now</string>
    
    <string name="string_optionA">A.   Verde</string>
    <string name="string_optionB">B.   Panda Express</string>
    <string name="string_optionC">C.   CPK</string>
    <string name="string_optionD">D.   Carls Jr.</string>
    <string name="string_back_to_login">Go back to login</string>
    <string name="string_answer_question">Answer a question</string>
    <string name="string_view_coupons">View coupons</string>
    <string name="string_visit_site">Visit the Coupinions site</string>
    <string name="string_another_question">Answer another question</string>
    <string name="string_main_menu">Go to main menu</string>
    <string name="string_sign_me_up">Sign me up!</string>

</resources>
