<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".MainMenuActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:src="@drawable/logo_full_path" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Main Menu"
        android:textSize="35sp"
        android:textColor="@color/grey"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/imgBtnMenu1"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_gravity="left"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_button"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/string_answer_question"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/imgBtnMenu2"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_gravity="left"
        android:layout_marginBottom="15dp"
        android:background="@drawable/green_button"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/string_view_coupons"
        android:textSize="25sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/imgBtnMenu3"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_gravity="left"
        android:layout_marginBottom="15dp"
        android:background="@drawable/yellow_button"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/string_visit_site"
        android:textSize="25sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/imgBtnMenu4"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_gravity="left"
        android:background="@drawable/blue_button"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/string_back_to_login"
        android:textSize="25sp"
        android:textColor="@color/white" />

</LinearLayout>
