<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ResultsActivity" >

    <ImageView
        android:id="@+id/imgLogoResults"
        android:layout_width="126dp"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/logo_full_path" />
    
    <!-- Problem: Cant get the title to separate from the graph -->  

    <com.androidplot.pie.PieChart
        android:id="@+id/mySimplePieChart"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        androidPlot.title=""
        androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
        android:layout_marginLeft="5dp"
        android:textColor="@color/titletextcolor" />

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:orientation="vertical"> 
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:text="Donut Size"
                android:textColor="@color/titletextcolor"
                android:id="@+id/donutSizeSeekLabel"/>

        <SeekBar
            android:id="@+id/donutSizeSeekBar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:max="90"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:progress="50" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"         
                android:layout_marginBottom="20dp"       
                android:text="unknown"
                android:textColor="@color/titletextcolor"
                android:id="@+id/donutSizeTextView"/> 
        </LinearLayout>

    <Button
        android:id="@+id/buttonAnotherQuestion"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:background="@drawable/green_button"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/string_another_question"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/buttonViewCoupons"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:background="@drawable/yellow_button"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/string_view_coupons"
        android:textSize="22sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonMainMenu"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_gravity="left"
        android:background="@drawable/blue_button"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/string_main_menu"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>
